--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/group1"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_instruments"
             android:icon="@drawable/ic_apps_black_24dp"
             android:title="@string/nav_instruments" />
         <item
-            android:id="@+id/nav_device"
-            android:icon="@drawable/ic_developer_board_black_24dp"
-            android:title="@string/nav_device" />
-        <item
             android:id="@+id/sensor_data_logger"
             android:icon="@drawable/ic_wifi_tethering_black_24dp"
             android:title="@string/logged_data" />
+    </group>
+    <group
+        android:id="@+id/group2"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_device"
+            android:icon="@drawable/ic_developer_board_black_24dp"
+            android:title="@string/nav_device" />
         <item
             android:id="@+id/nav_generate_config"
             android:icon="@drawable/create_config_icon"
@@ -21,33 +27,29 @@
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_black_24dp"
             android:title="@string/nav_settings" />
+    </group>
+
+    <group
+        android:id="@+id/group3"
+        android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_about_us"
+            android:checkable="true"
+            android:icon="@drawable/ic_info_black_24dp"
+            android:title="@string/nav_about_us" />
+        <item
+            android:id="@+id/nav_buy_pslab"
+            android:checkable="true"
+            android:icon="@drawable/ic_shopping_cart_black_24dp"
+            android:title="@string/nav_buy_pslab" />
+        <item
+            android:id="@+id/nav_help_feedback"
+            android:checkable="true"
+            android:icon="@drawable/ic_feedback_black_24dp"
+            android:title="@string/nav_help_feedback" />
         <item
             android:id="@+id/nav_share_app"
             android:icon="@drawable/share_icon"
-            android:title="@string/nav_share"
-            />
+            android:title="@string/nav_share" />
     </group>
-
-    <item android:title="@string/other">
-        <menu>
-            <item
-                android:id="@+id/nav_help_feedback"
-                android:icon="@drawable/ic_feedback_black_24dp"
-                android:title="@string/nav_help_feedback"
-                android:checkable="true" />
-            <item
-                android:id="@+id/nav_about_us"
-                android:icon="@drawable/ic_info_black_24dp"
-                android:title="@string/nav_about_us"
-                android:checkable="true" />
-            <item
-                android:id="@+id/nav_report_us"
-                android:icon="@drawable/ic_bug_report_black_24dp"
-                android:title="@string/nav_report" />
-            <item
-                android:id="@+id/nav_app_version"
-                android:icon="@drawable/icon_version"
-                android:title="@string/version" />
-        </menu>
-    </item>
 </menu>
