action bar added to osciiloscope and robotic arm (#1940)

--- a/app/src/main/res/layout/activity_robotic_arm.xml
+++ b/app/src/main/res/layout/activity_robotic_arm.xml
@@ -1,21 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/robotic_arm_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
     android:orientation="vertical"
-    android:weightSum="1"
-    android:id="@+id/robotic_arm_coordinator">
+    android:weightSum="1">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/top_app_bar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        </android.support.design.widget.AppBarLayout>
+
         <LinearLayout
             android:id="@+id/servo_controller_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/top_app_bar_layout"
             android:orientation="horizontal"
             android:scrollbars="horizontal">
 
@@ -43,44 +59,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-
-            <LinearLayout
-                android:id="@+id/servo_timeline_controls"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.1"
-                android:background="@color/colorPrimary"
-                android:gravity="center_vertical|center_horizontal"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/timeline_play_pause_button"
-                    android:layout_width="@dimen/robotic_arm_width"
-                    android:layout_height="@dimen/robotic_arm_height"
-                    android:layout_margin="@dimen/robotic_arm_margin_small"
-                    android:background="@drawable/ic_play_arrow_white_24dp" />
-
-                <Button
-                    android:id="@+id/timeline_stop_button"
-                    android:layout_width="@dimen/robotic_arm_width"
-                    android:layout_height="@dimen/robotic_arm_height"
-                    android:layout_margin="@dimen/robotic_arm_margin"
-                    android:background="@drawable/ic_stop_white_24dp" />
-
-                <Button
-                    android:id="@+id/timeline_save_button"
-                    android:layout_width="@dimen/robotic_arm_width"
-                    android:layout_height="@dimen/robotic_arm_height"
-                    android:layout_margin="@dimen/robotic_arm_margin_small"
-                    android:background="@drawable/menu_icon_save" />
-
-                <Button
-                    android:id="@+id/timeline_guide_button"
-                    android:layout_width="@dimen/robotic_arm_width"
-                    android:layout_height="@dimen/robotic_arm_height"
-                    android:layout_margin="@dimen/robotic_arm_margin"
-                    android:background="@drawable/menu_icon_guide" />
-            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -90,10 +68,10 @@
             android:orientation="horizontal">
 
             <HorizontalScrollView
+                android:id="@+id/horizontal_scroll_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.9"
-                android:id="@+id/horizontal_scroll_view">
+                android:layout_weight="0.9">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -142,6 +120,6 @@
         android:alpha="0"
         android:background="@color/black" />
 
-    <include layout="@layout/bottom_sheet_robotic_arm"/>
+    <include layout="@layout/bottom_sheet_robotic_arm" />
 
 </android.support.design.widget.CoordinatorLayout>
