wave generator ui changed (#1943)

--- a/app/src/main/res/layout/activity_wave_generator_main.xml
+++ b/app/src/main/res/layout/activity_wave_generator_main.xml
@@ -1,36 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/wave_generator_coordinator_layout"
+<android.support.design.widget.CoordinatorLayout android:id="@+id/wave_generator_coordinator_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/top_app_bar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
     <include
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         layout="@layout/activity_wave_generator" />
-
+    </LinearLayout>
     <View
         android:id="@+id/shadow"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
         android:alpha="0"/>
-    <ImageView
-        android:id="@+id/wave_generator_guide_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/menu_icon_guide"
-        android:layout_margin="@dimen/body_resistance_margin"
-        android:contentDescription="@string/show_guide_text" />
-
-    <TextView
-        android:layout_marginTop="@dimen/top_margin_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/show_guide_text"
-        android:id="@+id/show_guide_wave_generator"
-        android:background="#fff"
-        android:textColor="#000"
-        android:visibility="gone"/>
 
     <include layout="@layout/btm_sheet_wavegen_custom" />
 
