--- a/app/src/main/res/layout/activity_logic_analyzer.xml
+++ b/app/src/main/res/layout/activity_logic_analyzer.xml
@@ -5,20 +5,32 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/logical_analyzer_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:title="@string/logical_analyzer" />
-
     <LinearLayout
-        android:id="@+id/la_frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        </android.support.design.widget.AppBarLayout>
+
+        <LinearLayout
+            android:id="@+id/la_frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        </LinearLayout>
     </LinearLayout>
 
     <View
@@ -27,24 +39,6 @@
         android:layout_height="match_parent"
         android:alpha="0"
         android:background="@color/black" />
-
-    <ImageView
-        android:id="@+id/logic_analyzer_guide_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/menu_icon_guide"
-        android:contentDescription="@string/show_guide_text"
-        />
-
-    <TextView
-        android:layout_marginTop="@dimen/top_margin_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/show_guide_text"
-        android:id="@+id/show_guide_logic_analyzer"
-        android:background="#fff"
-        android:textColor="#000"
-        android:visibility="gone"/>
 
     <include layout="@layout/bottom_sheet_custom" />
 
