bluetoot hwifi connection option moved to Connect device menu (#1952)

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -69,9 +69,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/inst_margin_bottom"
+                    android:layout_marginStart="@dimen/instruction_ll_margin"
                     android:layout_marginLeft="@dimen/instruction_ll_margin"
-                    android:layout_marginStart="@dimen/instruction_ll_margin">
+                    android:layout_marginBottom="@dimen/inst_margin_bottom">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -82,8 +82,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/inst_bullet_margin"
                         android:layout_marginStart="@dimen/inst_bullet_margin"
+                        android:layout_marginLeft="@dimen/inst_bullet_margin"
                         android:text="@string/pslab_instruction_1"
                         android:textSize="@dimen/connect_instruction_text" />
                 </LinearLayout>
@@ -91,9 +91,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/inst_margin_bottom"
+                    android:layout_marginStart="@dimen/instruction_ll_margin"
                     android:layout_marginLeft="@dimen/instruction_ll_margin"
-                    android:layout_marginStart="@dimen/instruction_ll_margin">
+                    android:layout_marginBottom="@dimen/inst_margin_bottom">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -104,8 +104,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/inst_bullet_margin"
                         android:layout_marginStart="@dimen/inst_bullet_margin"
+                        android:layout_marginLeft="@dimen/inst_bullet_margin"
                         android:text="@string/pslab_instruction_2"
                         android:textSize="@dimen/connect_instruction_text" />
                 </LinearLayout>
@@ -113,8 +113,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/instruction_ll_margin"
-                    android:layout_marginStart="@dimen/instruction_ll_margin">
+                    android:layout_marginStart="@dimen/instruction_ll_margin"
+                    android:layout_marginLeft="@dimen/instruction_ll_margin">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -125,8 +125,8 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/inst_bullet_margin"
                         android:layout_marginStart="@dimen/inst_bullet_margin"
+                        android:layout_marginLeft="@dimen/inst_bullet_margin"
                         android:text="@string/pslab_instruction_3"
                         android:textSize="@dimen/connect_instruction_text" />
                 </LinearLayout>
@@ -144,12 +144,47 @@
                 android:textStyle="bold"
                 android:visibility="gone" />
 
+            <TextView
+                android:id="@+id/bluetooth_wifi_option_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/bluetooth_heading_margin"
+                android:gravity="center"
+                android:text="@string/bluetooth_wifi_connect_option" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top|center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/bluetooth_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/bluetooth_btn_margin"
+                    android:background="@color/colorPrimary"
+                    android:padding="@dimen/bluetooth_btn_margin"
+                    android:text="@string/bluetooth"
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:id="@+id/wifi_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/bluetooth_btn_margin"
+                    android:background="@color/colorPrimary"
+                    android:padding="@dimen/bluetooth_btn_margin"
+                    android:text="@string/wifi"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/separator_width"
                 android:layout_marginLeft="@dimen/separator_margin"
-                android:layout_marginRight="@dimen/separator_margin"
                 android:layout_marginTop="@dimen/separator_margin_top"
+                android:layout_marginRight="@dimen/separator_margin"
                 android:background="@color/grey_light" />
 
             <TextView
