--- a/app/src/main/res/drawable/btn_back_rounded.xml
+++ b/app/src/main/res/drawable/btn_back_rounded.xml
@@ -4,13 +4,13 @@
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
             <solid android:color="@color/theme_red_light" />
-            <corners android:radius="5dp" />
+            <corners android:radius="@dimen/button_bg_radius" />
         </shape>
     </item>
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/colorPrimary" />
-            <corners android:radius="5dp" />
+            <corners android:radius="@dimen/button_bg_radius" />
         </shape>
     </item>
 </selector>
